<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>gr2111</groupId>
		<artifactId>salary-checker</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>salary-restserver</artifactId>
    <packaging>jar</packaging>

    <properties>
        <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
        <node.version>v10.13.0</node.version>
        <yarn.version>v1.12.1</yarn.version>
        <salarychecker.version>0.0.1-SNAPSHOT</salarychecker.version>
    </properties>

	<dependencies>

		<dependency>
			<groupId>gr2111</groupId>
			<artifactId>salary-core</artifactId>
			<version>${salarychecker.version}</version>
		</dependency>

		<dependency>
			<groupId>gr2111</groupId>
			<artifactId>salary-json</artifactId>
			<version>${salarychecker.version}</version>
		</dependency>

		<!-- junit testing with jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency> 

		<!-- Spring-boot-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
		</dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-rest-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
        </dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                    @{jaCoCoArgLine} --add-opens salarychecker.restserver/salarychecker.restserver=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

            <!-- Checkstyle  -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>

            <!-- Spotbugs -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
            </plugin>

            <!-- Jacoco  -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <propertyName>jaCoCoArgLine</propertyName>
                </configuration>
            </plugin>

			<!-- Spring-boot -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
                    <execution>
                        <configuration>
                            <mainClass>salarychecker.restserver.RestServerApplication</mainClass>
                        </configuration>
                    </execution>
                </executions>
			</plugin>
    </plugins>
	</build>

    <profiles>
		<profile>
            <!-- https://github.com/amigoscode/spring-boot-react-fullstack/blob/master/pom.xml -->
			<id>demo</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.github.eirslett</groupId>
						<artifactId>frontend-maven-plugin</artifactId>
						<version>${frontend-maven-plugin.version}</version>
						<configuration>
							<workingDirectory>src/js</workingDirectory>
						</configuration>
						<executions>
							<execution>
								<id>install node</id>
								<goals>
									<goal>install-node-and-yarn</goal>
								</goals>
								<configuration>
									<nodeVersion>${node.version}</nodeVersion>
									<yarnVersion>${yarn.version}</yarnVersion>
								</configuration>
							</execution>
							<execution>
								<id>yarn install</id>
								<goals>
									<goal>yarn</goal>
								</goals>
								<phase>generate-resources</phase>
							</execution>
							<execution>
								<id>yarn test</id>
								<goals>
									<goal>yarn</goal>
								</goals>
								<phase>test</phase>
								<configuration>
									<arguments>test</arguments>
									<environmentVariables>
										<CI>true</CI>
									</environmentVariables>
								</configuration>
							</execution>
							<execution>
								<id>yarn build</id>
								<goals>
									<goal>yarn</goal>
								</goals>
								<phase>compile</phase>
								<configuration>
									<arguments>build</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<executions>
							<execution>
								<id>copy-resources</id>
								<phase>process-classes</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${basedir}/target/classes/static</outputDirectory>
									<resources>
										<resource>
											<directory>src/js/build</directory>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<properties>
				<spring.profiles.active>
					demo
				</spring.profiles.active>
			</properties>
		</profile>
		<profile>
			<id>demo-compile-to-java-16</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.github.eirslett</groupId>
						<artifactId>frontend-maven-plugin</artifactId>
						<version>${frontend-maven-plugin.version}</version>
						<configuration>
							<workingDirectory>src/js</workingDirectory>
						</configuration>
						<executions>
							<execution>
								<id>install node</id>
								<goals>
									<goal>install-node-and-yarn</goal>
								</goals>
								<configuration>
									<nodeVersion>${node.version}</nodeVersion>
									<yarnVersion>${yarn.version}</yarnVersion>
								</configuration>
							</execution>
							<execution>
								<id>yarn install</id>
								<goals>
									<goal>yarn</goal>
								</goals>
								<phase>generate-resources</phase>
							</execution>
							<execution>
								<id>yarn test</id>
								<goals>
									<goal>yarn</goal>
								</goals>
								<phase>test</phase>
								<configuration>
									<arguments>test</arguments>
									<environmentVariables>
										<CI>true</CI>
									</environmentVariables>
								</configuration>
							</execution>
							<execution>
								<id>yarn build</id>
								<goals>
									<goal>yarn</goal>
								</goals>
								<phase>compile</phase>
								<configuration>
									<arguments>build</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<executions>
							<execution>
								<id>copy-resources</id>
								<phase>process-classes</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${basedir}/target/classes/static</outputDirectory>
									<resources>
										<resource>
											<directory>src/js/build</directory>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<properties>
				<spring.profiles.active>
					demo
				</spring.profiles.active>
			</properties>
		</profile>
	</profiles>

</project>
